--- a/AnousithExpress.web.mvc/Views/Customer/Consolidation.cshtml
+++ b/AnousithExpress.web.mvc/Views/Customer/Consolidation.cshtml
@@ -7,7 +7,7 @@
     <div class="col-sm-4">
         <div class="page-header float-left">
             <div class="page-title">
-                <h1>ຫນ້າຫລັກ</h1>
+               
             </div>
         </div>
     </div>
@@ -33,20 +33,20 @@
                         </div>
                         <div class="card-body ">
                             <div class="row">
-                                <div class="col-6 horizontal">
+                                <div class="col-6">
                                     <label>ຈາກວັນທີ</label>
-                                    <input type="text" placeholder="ວັນ-ເດືອນ-ປີ" name="fromDate" onchange="searchByDate()" />
+                                    <input type="text" class="w-100" placeholder="ວັນ-ເດືອນ-ປີ" name="fromDate" onchange="searchByDate(this)" />
           
 
                                 </div>
                                 <div class="col-6 horizontal">
 
                                     <label>ຫາວັນທີ</label>
-                                    <input type="text" placeholder="ວັນ-ເດືອນ-ປີ" name="toDate" onchange="searchByDate()" />
+                                    <input type="text" class="w-100" placeholder="ວັນ-ເດືອນ-ປີ" name="toDate" onchange="searchByDate(this)" />
                              
                                 </div>
                             </div>
-                            <table id="itemDataTable" class="table table-striped table-bordered" style="width:100%;">
+                            <table id="itemDataTable" class="table table-striped table-bordered" style="width:100%;white-space:nowrap;">
                                 <thead>
                                     <tr>
                                         <th>ເລກສັງລວມ</th>
@@ -124,8 +124,9 @@
             });
         }
 
-        function searchByDate() {
+        function searchByDate(source) {
             table.ajax.reload(null, false);
+            jQuery(source).datepicker('hide');
         }
 
         function openDetail(id) {
