--- a/AnousithExpress.web.mvc/Views/Customer/Index.cshtml
+++ b/AnousithExpress.web.mvc/Views/Customer/Index.cshtml
@@ -8,7 +8,7 @@
     <div class="col-sm-4">
         <div class="page-header float-left">
             <div class="page-title">
-                <h1>ຫນ້າຫລັກ</h1>
+               
             </div>
         </div>
     </div>
@@ -22,117 +22,126 @@
         </div>
     </div>
 </div>
-<div class="content mt-3">
-    <div class="animated">
-        <a href="@Url.Action("ItemsCreateUpdate","Customer")">
-            <div class="col-sm-6 col-lg-3">
-                <div class="card text-white bg-flat-color-1">
-                    <div class="card-body pb-0">
-                        <div class="dropdown float-right">
-                            <i class="fa fa-cog"></i>
+<div class="container">
+    <div class="content mt-3">
+        <div class="animated">
+            <a href="@Url.Action("ItemsCreateUpdate","Customer")">
+                <div class="col-sm-6 col-lg-3">
+                    <div class="card text-white bg-flat-color-1">
+                        <div class="card-body pb-0">
+                            <div class="dropdown float-right">
+                                <i class="fa fa-cog"></i>
+                            </div>
+                            <h4 class="mb-0">
+                                <span class="count"> </span>
+                            </h4>
+                            <p class="text-light">ສ້າງສີນຄ້າ</p>
                         </div>
-                        <h4 class="mb-0">
-                            <span class="count"> </span>
-                        </h4>
-                        <p class="text-light">ສ້າງສີນຄ້າ</p>
                     </div>
                 </div>
-            </div>
-        </a>
-        <a href="@Url.Action("ItemsInStore","Customer")">
-            <div class="col-sm-6 col-lg-3">
-                <div class="card text-white bg-flat-color-2">
-                    <div class="card-body pb-0">
-                        <div class="dropdown float-right">
-                            <i class="fa fa-cog"></i>
+            </a>
+            <a href="@Url.Action("ItemsInStore","Customer")">
+                <div class="col-sm-6 col-lg-3">
+                    <div class="card text-white bg-flat-color-2">
+                        <div class="card-body pb-0">
+                            <div class="dropdown float-right">
+                                <i class="fa fa-cog"></i>
+                            </div>
+                            <h4 class="mb-0">
+                                <span class="count"> </span>
+                            </h4>
+                            <p class="text-light">ສີນຄ້າທີ່ຍັງບໍ່ທັນສົ່ງ</p>
                         </div>
-                        <h4 class="mb-0">
-                            <span class="count"> </span>
-                        </h4>
-                        <p class="text-light">ສີນຄ້າທີ່ຍັງບໍ່ທັນສົ່ງ</p>
                     </div>
                 </div>
-            </div>
-        </a>
-        <a href="@Url.Action("ItemsInProcess","Customer")">
-            <div class="col-sm-6 col-lg-3">
-                <div class="card text-white bg-flat-color-3">
-                    <div class="card-body pb-0">
-                        <div class="dropdown float-right">
-                            <i class="fa fa-cog"></i>
+            </a>
+            <a href="@Url.Action("ItemsInProcess","Customer")">
+                <div class="col-sm-6 col-lg-3">
+                    <div class="card text-white bg-flat-color-3">
+                        <div class="card-body pb-0">
+                            <div class="dropdown float-right">
+                                <i class="fa fa-cog"></i>
+                            </div>
+                            <h4 class="mb-0">
+                                <span class="count"> </span>
+                            </h4>
+                            <p class="text-light">ສີນຄ້າກຳລັງດຳເນີນການ</p>
                         </div>
-                        <h4 class="mb-0">
-                            <span class="count"> </span>
-                        </h4>
-                        <p class="text-light">ສີນຄ້າກຳລັງດຳເນີນການ</p>
                     </div>
                 </div>
-            </div>
-        </a>
-        <a href="@Url.Action("ItemsProcessed","Customer")">
-            <div class="col-sm-6 col-lg-3">
-                <div class="card text-white bg-flat-color-4">
-                    <div class="card-body pb-0">
-                        <div class="dropdown float-right">
-                            <i class="fa fa-cog"></i>
+            </a>
+            <a href="@Url.Action("ItemsProcessed","Customer")">
+                <div class="col-sm-6 col-lg-3">
+                    <div class="card text-white bg-flat-color-4">
+                        <div class="card-body pb-0">
+                            <div class="dropdown float-right">
+                                <i class="fa fa-cog"></i>
+                            </div>
+                            <h4 class="mb-0">
+                                <span class="count"> </span>
+                            </h4>
+                            <p class="text-light">ປະຫວັດການສົ່ງ</p>
                         </div>
-                        <h4 class="mb-0">
-                            <span class="count"> </span>
-                        </h4>
-                        <p class="text-light">ປະຫວັດການສົ່ງ</p>
                     </div>
                 </div>
-            </div>
-        </a>
-        
-        <a href="@Url.Action("Consolidation","Customer")">
-            <div class="col-sm-6 col-lg-3">
-                <div class="card text-white bg-flat-color-5">
-                    <div class="card-body pb-0">
-                        <div class="dropdown float-right">
-                            <i class="fa fa-cog"></i>
+            </a>
+
+            <a href="@Url.Action("Consolidation","Customer")">
+                <div class="col-sm-6 col-lg-3">
+                    <div class="card text-white bg-flat-color-5">
+                        <div class="card-body pb-0">
+                            <div class="dropdown float-right">
+                                <i class="fa fa-cog"></i>
+                            </div>
+                            <h4 class="mb-0">
+                                <span class="count"> </span>
+                            </h4>
+                            <p class="text-light">ສັງລວມ</p>
                         </div>
-                        <h4 class="mb-0">
-                            <span class="count"> </span>
-                        </h4>
-                        <p class="text-light">ສັງລວມ</p>
                     </div>
                 </div>
-            </div>
-        </a>
-        
-        <div class="col-sm-6 col-lg-3">
-            <div class="card text-white bg-flat-color-1">
-                <div class="card-body pb-0">
-                    <div class="dropdown float-right">
-                        <i class="fa fa-cog"></i>
+            </a>
+
+            <a href="@Url.Action("ProfileDetail","Customer")">
+                <div class="col-sm-6 col-lg-3">
+                    <div class="card text-white bg-flat-color-1">
+                        <div class="card-body pb-0">
+                            <div class="dropdown float-right">
+                                <i class="fa fa-cog"></i>
+                            </div>
+                            <h4 class="mb-0">
+                                <span class="count"> </span>
+                            </h4>
+                            <p class="text-light">ຂໍ້ມູນສ່ວນໂຕ</p>
+                        </div>
                     </div>
-                    <h4 class="mb-0">
-                        <span class="count"> </span>
-                    </h4>
-                    <p class="text-light">ຂໍ້ມູນສ່ວນໂຕ</p>
                 </div>
-            </div>
-        </div>
-        <div class="col-sm-6 col-lg-3">
-            <div class="card text-white bg-flat-color-2">
-                <div class="card-body pb-0">
-                    <div class="dropdown float-right">
-                        <i class="fa fa-cog"></i>
+            </a>
+
+            <a href="@Url.Action("CLogout","Account")">
+                <div class="col-sm-6 col-lg-3">
+                    <div class="card text-white bg-flat-color-2">
+                        <div class="card-body pb-0">
+                            <div class="dropdown float-right">
+                                <i class="fa fa-cog"></i>
+                            </div>
+                            <h4 class="mb-0">
+                                <span class="count"> </span>
+                            </h4>
+                            <p class="text-light">ອອກຈາກລະບົບ</p>
+                        </div>
                     </div>
-                    <h4 class="mb-0">
-                        <span class="count"> </span>
-                    </h4>
-                    <p class="text-light">ອອກຈາກລະບົບ</p>
                 </div>
-            </div>
-        </div>
+            </a>
 
 
 
 
-    
-    </div><!-- .animated -->
+
+
+        </div><!-- .animated -->
+    </div>
 </div>
+
 
 
