--- a/AnousithExpress.web.mvc/Views/Customer/ItemsProcessed.cshtml
+++ b/AnousithExpress.web.mvc/Views/Customer/ItemsProcessed.cshtml
@@ -9,7 +9,7 @@
     <div class="col-sm-4">
         <div class="page-header float-left">
             <div class="page-title">
-                <h1>ຫນ້າຫລັກ</h1>
+             
             </div>
         </div>
     </div>
@@ -37,14 +37,14 @@
                             <div class="row">
                                 <div class="col-6">
                                     <label>ຈາກວັນທີສົ່ງ</label>
-                                    <input type="text" placeholder="ວັນ-ເດືອນ-ປີ" name="fromDate" onchange="searchByDate()" />
+                                    <input type="text" placeholder="ວັນ-ເດືອນ-ປີ" class="w-100" name="fromDate" onchange="searchByDate(this)" />
         
 
                                 </div>
                                 <div class="col-6 horizontal">
 
                                     <label>ຫາວັນທີສົ່ງ</label>
-                                    <input type="text" placeholder="ວັນ-ເດືອນ-ປີ" name="toDate" readonly="readonly" onchange="searchByDate()" />
+                                    <input type="text" placeholder="ວັນ-ເດືອນ-ປີ" class="w-100" name="toDate" readonly="readonly" onchange="searchByDate(this)" />
               
                                 </div>
                             </div>
@@ -67,22 +67,26 @@
                                     </table>
                                 </div>
                             </div>
-                            <table id="itemDataTable" class="table table-striped table-bordered" style="width:100%;">
-                                <thead>
-                                    <tr>
-                                        <th>ເລກຕິດຕາມ</th>
-                                        <th>ປະເພດສີນຄ້າ</th>
-                                        <th>ສະຖານະ</th>
-                                        <th>ຊື່ຜູ້ຮັບ</th>
-                                        <th>ເບີໂທຜູ້ຮັບ</th>
-                                        <th>ທີ່ຢູ່ຜູ້ຮັບ</th>
-                                        <th>ມື້ສົ່ງ</th>
-                                        <th>ເກັບເງິນປາຍທາງ</th>
-                                        <th>ຝັງຊັ້ນ</th>
-                                    </tr>
-                                </thead>
+                            <div class="table-responsive">
+                                <table id="itemDataTable" class="table table-striped table-bordered" style="width:100%;white-space:nowrap;">
+                                    <thead>
+                                        <tr>
+                                            <th class="control">ເລກຕິດຕາມ</th>
+                                            <th class="control">ປະເພດສີນຄ້າ</th>
+                                            <th class="control">ສະຖານະ</th>
+                                            <th>ຊື່ຜູ້ຮັບ</th>
+                                            <th>ເບີໂທຜູ້ຮັບ</th>
+                                            <th>ທີ່ຢູ່ຜູ້ຮັບ</th>
+                                            <th>ມື້ສົ່ງ</th>
+                                            <th>ມື້ມອບເຄື່ອງ</th>
+                                            <th>ເກັບເງິນປາຍທາງ</th>
+                                            <th class="control">ຝັງຊັ້ນ</th>
+                                        </tr>
+                                    </thead>
 
-                            </table>
+                                </table>
+                            </div>
+                           
                         </div>
                     </div>
                 </div>
@@ -145,6 +149,7 @@
                     { data: "ReceipverPhone", name: "ReceipverPhone" },
                     { data: "ReceiverAddress", name: "ReceiverAddress" },
                     { data: "ReceiveDate", name: "ReceiveDate" },
+                    { data: "SentDate", name: "SentDate" },
                     {
                         data: "Id", render: function (data, type, full, meta) {
                             let html = '';
@@ -195,8 +200,9 @@
                 }
             });
         }
-        function searchByDate() {
+        function searchByDate(source) {
             table.ajax.reload(null, false);
+            jQuery(source).datepicker('hide');
             itemCount();
         }
 
