--- a/AnousithExpress.web.mvc/Views/Customer/ProfileDetail.cshtml
+++ b/AnousithExpress.web.mvc/Views/Customer/ProfileDetail.cshtml
@@ -1,42 +1,79 @@
 ﻿
 @{
-    ViewBag.Title = "ProfileDetail";
+    Layout = "~/Views/Shared/_CustomerLayout.cshtml";
+    ViewBag.Title = "ຂໍ້ມູນສ່ວນໂຕ";
 }
 
 @model AnousithExpress.DataEntry.ViewModels.Customer.CustomerProfileItemsModel
-    <h2>ຂໍ້ມູນສ່ວນໂຕ</h2>
-<div class="panel">
-    <div class="panel-body">
-        <table width="80%">
-            <tr>
-                <td width="20%"><strong>ຊື່ ແລະ ນາມສະກຸນ </strong></td>
-                <td width="80%">@Model.Profile.Name</td>
-            </tr>
-            <tr>
-                <td width="20%"><strong>ເບີໂທລະສັບ </strong></td>
-                <td width="80%">@Model.Profile.Phonenumber</td>
-            </tr>
-            <tr>
-                <td width="20%"><strong>ທີ່ຢູ່ </strong></td>
-                <td width="80%">@Model.Profile.Address</td>
-            </tr>
-            <tr>
-                <td width="20%"><strong>ເລກບັນຊີເງິນກີບ</strong></td>
-                <td width="80%">@Model.Profile.BCEL_Kip</td>
-            </tr>
-            <tr>
-                <td width="20%"><strong>ເລກບັນຊີເງິນບາດ</strong></td>
-                <td width="80%">@Model.Profile.BCEL_Baht</td>
-            </tr>
-            <tr>
-                <td width="20%"><strong>ເລກບັນຊີເງິນໂດລາ</strong></td>
-                <td width="80%">@Model.Profile.BCEL_Dollar</td>
-            </tr>
-        </table>
-
-        <button type="button" class="btn btn-info" onclick='window.location = "@Url.Action("ProfileUpdate","Customer")"'>ປ່ຽນແປງ</button>
-        <button type="button" class="btn btn-info" onclick='window.location = "@Url.Action("Index","Customer")"'>ກັບໄປຫນ້າຫລັກ</button>
-
-
+<div class="breadcrumbs">
+    <div class="col-sm-4">
+        <div class="page-header float-left">
+            <div class="page-title">
+               
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-8">
+        <div class="page-header float-right">
+            <div class="page-title">
+                <ol class="breadcrumb text-right">
+                    <li><a href="@Url.Action("Index","Customer")">ຫນ້າຫລັກ</a></li>            
+                    <li class="active">@ViewData["Title"]</li>
+                </ol>
+            </div>
+        </div>
     </div>
 </div>
+<div class="container">
+    <div class="col-lg-10">
+        <div class="card">
+            <div class="card-header">
+                <strong>@ViewData["Title"]</strong>
+            </div>
+            <div class="card-body card-block">
+                <div class="row">
+                    <div class="col-md-12">
+                        <table class="table table-striped" style="width:100%;">
+                            <tr>
+                                <td style="width:30%;"><strong>ຊື່ ແລະ ນາມສະກຸນ: </strong></td>
+                                <td style="width:70%;">@Model.Profile.Name</td>
+                            </tr>
+                            <tr>
+                                <td style="width:30%;"><strong>ເບີໂທລະສັບ: </strong></td>
+                                <td style="width:70%;">@Model.Profile.Phonenumber</td>
+                            </tr>
+                            <tr>
+                                <td style="width:30%;"><strong>ທີ່ຢູ່: </strong></td>
+                                <td style="width:70%;">@Model.Profile.Address</td>
+                            </tr>
+                            <tr>
+                                <td style="width:30%;"><strong>ເລກບັນຊີເງິນກີບ:</strong></td>
+                                <td style="width:70%;">@Model.Profile.BCEL_Kip</td>
+                            </tr>
+                            <tr>
+                                <td style="width:30%;"><strong>ເລກບັນຊີເງິນບາດ:</strong></td>
+                                <td style="width:70%;">@Model.Profile.BCEL_Baht</td>
+                            </tr>
+                            <tr>
+                                <td style="width:30%;"><strong>ເລກບັນຊີເງິນໂດລາ:</strong></td>
+                                <td style="width:70%;">@Model.Profile.BCEL_Dollar</td>
+                            </tr>
+                        </table>
+
+                    </div>
+                </div>
+            </div>
+            <div class="card-footer text-center">
+                <button type="button" onclick='window.location="@Url.Action("ProfileUpdate","Customer")"' class="btn btn-warning col-sm-5 mb-1">
+                    <i class="fa fa-dot-circle-o"></i> ປ່ຽນແປງ
+                </button>
+                <button type="button" onclick='window.location ="@Url.Action("Index","Customer")"' class="btn btn-info  col-sm-5 mb-1">
+                    <i class="fa fa-backward"></i> ກັບໄປຫນ້າຫລັກ
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
