--- a/AnousithExpress.web.mvc/Views/Delivery/Index.cshtml
+++ b/AnousithExpress.web.mvc/Views/Delivery/Index.cshtml
@@ -1,22 +1,81 @@
 ﻿
 @{
+    Layout = "~/Views/Shared/_CustomerLayout.cshtml";
     ViewBag.Title = "Index";
 }
 
-<h2>ຫນ້າຫລັກ</h2>
-<a href="@Url.Action("ItemsToPickUp","Delivery")" class="panel">
-    <div class="panel panel-default col-md-3 panelhover" style="margin:10px;">
-        <div class="panel-body">
-            <h3>ສີນຄ້າທີ່ຕ້ອງໄປຮັບ</h3>
+<div class="breadcrumbs">
+    <div class="col-sm-4">
+        <div class="page-header float-left">
+            <div class="page-title">
+
+            </div>
         </div>
     </div>
-</a>
-
-<a href="@Url.Action("ItemsToSent","Delivery")" class="panel">
-    <div class="panel panel-default col-md-3 panelhover" style="margin:10px;">
-        <div class="panel-body">
-            <h3>ສີນຄ້າທີ່ຕ້ອງໄປສົ່ງ</h3>
+    <div class="col-sm-8">
+        <div class="page-header float-right">
+            <div class="page-title">
+                <ol class="breadcrumb text-right">
+                    <li class="active">ຫນ້າຫລັກ</li>
+                </ol>
+            </div>
         </div>
     </div>
-</a>
+</div>
+<div class="container">
+    <div class="content mt-3">
+        <div class="animated">
+            <a href="@Url.Action("ItemsToPickUp","Delivery")">
+                <div class="col-sm-6 col-lg-3">
+                    <div class="card text-white bg-flat-color-1">
+                        <div class="card-body pb-0">
+                            <div class="dropdown float-right">
+                                <i class="fa fa-cog"></i>
+                            </div>
+                            <h4 class="mb-0">
+                                <span class="count"> </span>
+                            </h4>
+                            <p class="text-light">ສີນຄ້າຕ້ອງໄປຮັບ</p>
+                        </div>
+                    </div>
+                </div>
+            </a>
+            <a href="@Url.Action("ItemsToSent","Delivery")">
+                <div class="col-sm-6 col-lg-3">
+                    <div class="card text-white bg-flat-color-2">
+                        <div class="card-body pb-0">
+                            <div class="dropdown float-right">
+                                <i class="fa fa-cog"></i>
+                            </div>
+                            <h4 class="mb-0">
+                                <span class="count"> </span>
+                            </h4>
+                            <p class="text-light">ສີນຄ້າທີ່ຕ້ອງສົ່ງ</p>
+                        </div>
+                    </div>
+                </div>
+            </a>
+            <a href="@Url.Action("ULogout","Account")">
+                <div class="col-sm-6 col-lg-3">
+                    <div class="card text-white bg-flat-color-2">
+                        <div class="card-body pb-0">
+                            <div class="dropdown float-right">
+                                <i class="fa fa-cog"></i>
+                            </div>
+                            <h4 class="mb-0">
+                                <span class="count"> </span>
+                            </h4>
+                            <p class="text-light">ອອກຈາກລະບົບ</p>
+                        </div>
+                    </div>
+                </div>
+            </a>
 
+
+
+
+
+
+        </div><!-- .animated -->
+    </div>
+</div>
