--- a/AnousithExpress.web.mvc/Views/Delivery/ItemsToSent.cshtml
+++ b/AnousithExpress.web.mvc/Views/Delivery/ItemsToSent.cshtml
@@ -1,67 +1,201 @@
 ﻿
 @{
-    ViewBag.Title = "ItemsToSent";
+    Layout = "~/Views/Shared/_CustomerLayout.cshtml";
+    ViewBag.Title = "ສີນຄ້າຕ້ອງໄປສົ່ງ";
 }
-@model List<AnousithExpress.DataEntry.ViewModels.Delivery.ItemsAllocationModel>
 
-<h2>ສີນຄ້າຕ້ອງໄປສົ່ງ</h2>
+<div class="breadcrumbs">
+    <div class="col-sm-4">
+        <div class="page-header float-left">
+            <div class="page-title">
 
-<div class="panel">
-    <div class="panel-body">
-        @using (Html.BeginForm("ItemsToSent", "Delivery", FormMethod.Get))
-        {
-            <label>ສາຍສົ່ງ</label>
-            @Html.DropDownList("routeId", ViewBag.Routes as SelectList)
-            <label>ເວລາສົ່ງ</label>
-            @Html.DropDownList("timeId", ViewBag.Times as SelectList)
-            <label>ວັນທີສົ່ງ</label>
-            <input type="date" name="dateToDeliver" />
-            <input type="submit" name="submit" value="ຄົ້ນຫາ" />
-        }
-        <div>@TempData["Message"]</div>
-        @using (Html.BeginForm("RecievedItem", "Delivery", FormMethod.Post))
-        {
-            <table class="table table-borderless">
-                <thead>
-                    <tr>
-
-                        <th>ເລກຕິດຕາມ</th>
-                        <th>ຜຸ້ຮັບ</th>
-                        <th>ເບີໂທຕິດຕໍ່</th>
-                        <th>ລາຍລະອຽດ</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var item in Model)
-                    {
-
-                        <tr class="clickable-row">
-                            <td>@item.ItemTrackingNumber</td>
-                            <td>@item.ReceiverName</td>
-                            <td>@item.ReceiverPhonenumber</td>
-                            <td>@item.Description</td>
-                        </tr>
-                    }
-
-                </tbody>
-            </table>
-
-        }
-
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-8">
+        <div class="page-header float-right">
+            <div class="page-title">
+                <ol class="breadcrumb text-right">
+                    <li><a href="@Url.Action("Index","Customer")">ຫນ້າຫລັກ</a></li>
+                    <li class="active">@ViewData["Title"]</li>
+                </ol>
+            </div>
+        </div>
     </div>
 </div>
+<div class="container" id="containerResize">
+    <div class="content mt-3">
+        <div class="animated fadeIn">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="card">
+                        <div class="card-header">
+                            <strong class="card-title text-center">ຕາຕະລາງ @ViewData["Title"]</strong>
+                        </div>
+                        <div class="card-body ">
+                            <div class="row">
+                                <div class="col-md-12 form-horizontal text-center">
+                                    <div class="form-group">
+                                        <label>ສາຍສົ່ງ</label>
+                                        @Html.DropDownList("routeId", ViewBag.Routes as SelectList, new { @id = "Route" })
+                                        <label>ເວລາສົ່ງ</label>
+                                        @Html.DropDownList("timeId", ViewBag.Times as SelectList, new { @id = "Time" })
+                                    </div>
+                    
+                                    <div class="form-group">
+                                        <label>ວັນທີສົ່ງ</label>
+                                        <input type="text" name="dateToDeliver" id="dateToDeliver" placeholder="ວັນ ເດືອນ ປີ ທີ່ສົ່ງ" />
+                                    </div>
+                                   
+                                </div>
+                            </div>
+                            <div class="table-responsive">
+                                <table id="itemDataTable" class="table table-striped table-hover table-bordered " style="width:100%;white-space:nowrap;">
+                                    <thead>
+                                        <tr>
+                                           
+                                            <th class="control">ປະເພດສີນຄ້າ</th>
+                                            <th class="control">ເລກຕິດຕາມ</th>
+                                            <th class="none">ສະຖານະ</th>
+                                            <th class="control">ຊື່ຜູ້ຮັບ</th>
+                                            <th class="control">ເບີໂທຜູ້ຮັບ</th>
+                                            <th class="none">ທີ່ຢູ່ຜູ້ຮັບ</th>
+                                            <th class="none">ເກັບເງິນປາຍທາງ</th>
+                                        </tr>
+                                    </thead>
 
-<script type="text/javascript" language="javascript">
-    $(document).ready(function () {
-        document.getElementsByName('dateToDeliver').valueAsDate = new Date();
-        //$(".clickable-row").click(function () {
-        //    window.location = $(this).data("href");
-        //});
-    });
-    function toggle(source) {
-        let checkboxes = document.getElementsByName("itemsId");
-        for (var i = 0, n = checkboxes.length; i < n; i++) {
-            checkboxes[i].checked = source.checked;
+                                </table>
+                            </div>
+
+                        </div>
+                        <div class="card-footer text-center">
+                            <input type="button" class="btn btn-warning btn-flat w-75" name="name" onclick="submitReceive()" value="ຢືນຢັນການຮັບສີນຄ້າ" />
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div><!-- .animated -->
+    </div><!-- .content -->
+</div>
+<div class="modal fade" id="modal1" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                <div id="content" class="text-center">
+                    <strong id="popupmessage">ທ່ານແນ່ໃຈທີ່ຈະລືບລາຍການ?</strong>
+                </div>
+                <div id="modalButton" class="text-center">
+                    <button class="btn btn-primary btn-flat mb-1 w-75" data-dismiss="modal">ອອກ</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+@section scripts{
+    <script type="text/javascript" language="javascript">
+        let table;
+        jQuery(document).ready(function () {
+            //itemTable();
+            jQuery('input[name="dateToDeliver"]').datepicker({
+                language:"la"
+            });
+        
+        });
+        function toggle(source) {
+            let checkboxes = document.getElementsByName("itemsId");
+            for (var i = 0, n = checkboxes.length; i < n; i++) {
+                checkboxes[i].checked = source.checked;
+            }
         }
-    }
-</script>
+
+        function itemTable() {
+            table = jQuery("#itemDataTable").DataTable({
+                serverSide: true,
+                responsive: true,
+                paging: false,
+                searching: false,
+                sorting: false,
+                language: LaoLangage,
+
+                ajax: {
+                    url: "/Delivery/ItemsToPickUpTable",
+                    type: "POST",
+                    datatype: "json",
+                    data: function (d) {
+                        d.customerId = jQuery("input[name='customerId']").val() || 0
+                    }
+                },
+                columnDefs: [
+                    {
+                        targets: [0, 1, 2, 3, 4, 5, 6],
+                        orderable: false
+                    },
+
+                ],
+                columns: [
+                    
+
+                    { data: "ItemName", name: "ItemName" },
+                    { data: "TrackingNumber", name: "TrackingNumber" },
+                    { data: "Status", name: "Status" },
+                    { data: "ReceiverName", name: "ReceiverName" },
+                    { data: "ReceipverPhone", name: "ReceipverPhone" },
+                    { data: "ReceiverAddress", name: "ReceiverAddress" },
+                    {
+                        data: "Id", render: function (data, type, full, meta) {
+                            let html = '';
+                            if (full.ItemValue_Kip !== null) {
+                                html += full.ItemValue_Kip + "ກີບ<br/>";
+                            }
+                            if (full.ItemValue_Baht !== null) {
+                                html += full.ItemValue_Baht + "ບາດ<br/>";
+                            }
+                            if (full.ItemValue_Dollar !== null) {
+                                html += full.ItemValue_Dollar + "ໂດລ້າ";
+                            }
+                            if (full.ItemValue_Kip === null && full.ItemValue_Baht === null && full.ItemValue_Dollar === null) {
+                                html = 'ບໍ່ມີ';
+                            }
+                            return '' + html + '';
+                        }
+                    }
+
+                ]
+            });
+        }
+        function searchItems() {
+            table.ajax.reload(false, null);
+        }
+
+        function submitReceive() {
+            let CheckboxArray = [];
+            jQuery("#checkId:checked").each(function () {
+                CheckboxArray.push(jQuery(this).val());
+            });
+
+            jQuery.ajax({
+                url: "/Delivery/PickUp",
+                data: { itemsId: CheckboxArray },
+                type: "POST",
+                datatype: "json",
+                success: function (r) {
+                    if (r === true) {
+                        jQuery("#popupmessage").html("ສຳເລັດ");
+                        jQuery("#modal1").modal("show");
+                        table.ajax.reload(null, false);
+                    }
+                    else if (r === "inValid") {
+                        jQuery("#popupmessage").html("ກະລຸນາເລືອກສີນຄ້າ");
+                        jQuery("#modal1").modal("show");
+                    }
+                    else {
+                        jQuery("#popupmessage").html("ບໍ່ສຳເລັດ");
+                        jQuery("#modal1").modal("show");
+                        table.ajax.reload(null, false);
+                    }
+                }
+            });
+        }
+    </script>
+}
