--- a/AnousithExpress.web.mvc/Views/Shared/_CustomerLayout.cshtml
+++ b/AnousithExpress.web.mvc/Views/Shared/_CustomerLayout.cshtml
@@ -48,9 +48,9 @@ else
             {
                 @Html.Partial("_CustomerMenu")
             }
-            else if (Session["Role"].ToString() == "1")
+            else if (Session["Role"].ToString() == "3")
             {
-
+                @Html.Partial("_DeliveryMenu")
             }
             else
             {
@@ -184,8 +184,11 @@ else
     <script src="~/assets/js/lib/data-table/buttons.colVis.min.js"></script>
     <script src="~/assets/js/lib/data-table/datatables-init.js"></script>
     <script src="~/assets/js/bootstrap-datepicker.js"></script>
-    <script src="~/assets/js/DatatableVariable.js"></script>
     <script src="~/assets/js/jQuery-datePicker.lao.js"></script>
+
+    <script src="~/assets/js/DatatableVariable.js"></script>
+
+
     @RenderSection("scripts", required: false)
 </body>
 </html>  
