--- a/AnousithExpress.web.mvc/Views/Shared/_CustomerMenu.cshtml
+++ b/AnousithExpress.web.mvc/Views/Shared/_CustomerMenu.cshtml
@@ -19,7 +19,9 @@
         <li>
             <a href="@Url.Action("Consolidation","Customer")" style="font-family:'Phetsarath OT';"><i class="menu-icon fa fa-book"></i>ສັງລວມ</a>
         </li>
-        <li><a href="tables-basic.html" style="font-family:'Phetsarath OT';"><i class="menu-icon fa fa-address-card"></i>ຂໍ້ມູນສ່ວນຕົວ</a></li>
+        <li>
+            <a href="@Url.Action("ProfileDetail","Customer")" style="font-family:'Phetsarath OT';"><i class="menu-icon fa fa-address-card"></i>ຂໍ້ມູນສ່ວນຕົວ</a>
+        </li>
         <li><a href="@Url.Action("CLogout","Account")" style="font-family:'Phetsarath OT';"><i class="menu-icon fa fa-sign-out"></i>ອອກຈາກລະບົບ</a></li>
     </ul>
 </div>
