--- a/AnousithExpress.web.mvc/Views/Admin/Customer.cshtml
+++ b/AnousithExpress.web.mvc/Views/Admin/Customer.cshtml
@@ -1,23 +1,125 @@
 ﻿
 @{
-    ViewBag.Title = "Customer";
-}
-@model List<AnousithExpress.DataEntry.ViewModels.Admin.CustomerModel>
-<h2>ລຸກຄ້າ</h2>
 
-<div class="panel">
-    <div class="panel-body">
-        @foreach (var customer in Model)
-        {
-        <a class="panel" href="@Url.Action("CustomerItems","Admin", new { customerId = customer.CustomerId})">
-            <div class="panel panel-teal col-md-1 customerButton">
-                <div class="panel-body">
-                    <strong>@customer.CustomerIdShow</strong>
-                    <span class="badge">@customer.NumberOfConfirmItem</span>
-                </div>
+
+    ViewBag.Title = "ລຸກຄ້າ";
+    Layout = "~/Views/Shared/_CustomerLayout.cshtml";
+}
+<div class="breadcrumbs">
+    <div class="col-sm-4">
+        <div class="page-header float-left">
+            <div class="page-title">
+
             </div>
-        </a>
-           
-        }
+        </div>
+    </div>
+    <div class="col-sm-8">
+        <div class="page-header float-right">
+            <div class="page-title">
+                <ol class="breadcrumb text-right">
+                    <li><a href="@Url.Action("Index","Admin")">ຫນ້າຫລັກ</a></li>
+                    <li class="active">@ViewData["Title"]</li>
+                </ol>
+            </div>
+        </div>
     </div>
 </div>
+<div class="container" id="containerResize">
+    <div class="content mt-3">
+        <div class="animated fadeIn">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="form-horizontal text-center">
+                                <label style="font-weight:bold;">ລຽງຕາມ</label>
+                                <div class="form-check-inline form-check">
+                                    <label for="inline-radio1" class="form-check-label ">
+                                        <input type="radio" id="newConfirmItem"  name="inline-radios" onchange="getCustomerList()" value="option1" class="form-check-input"> ສີນຄ້າຢືນຢັນໃຫມ່ 
+                                    </label>
+                                    <label for="inline-radio2" class="form-check-label ">
+                                        <input type="radio" id="inProcessItem" name="inline-radios" onchange="getCustomerList()" value="option2" class="form-check-input ml-2"> ສີນຄ້າກຳລັບດຳເນີນການ
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-body " >
+                            <aside style="height:540px; overflow-y:scroll;" id="CustomerBody"></aside>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div><!-- .animated -->
+    </div><!-- .content -->
+</div>
+
+
+@section scripts{
+    <script>
+        jQuery(document).ready(function () {
+            getCustomerList();
+        });
+        function getCustomerList() {
+            let value = '';
+            if (jQuery("#newConfirmItem").is(':checked')) {
+                value = "1";
+            }
+            else if (jQuery("#inProcessItem").is(':checked')) {
+                value = "2";
+            }
+            else {
+                value = null;  
+            }    
+            jQuery.ajax({
+                url: "/Admin/CustomerList",
+                type: "GET",
+                data: { sortBy: value },
+                datatype: "json",
+                success: function (customer) {
+                    jQuery("#CustomerBody").html('');
+                    for (var i = 0; i < customer.length; i++) {
+                        let html = '';
+                        html += '<div class="animated fadeIn">';
+                        html += '<div class="col-md-4">';
+                        html += '<aside class="profile-nav alt">';
+                        html += '<section class="card">';
+                        html += '<div class="card-header user-header alt bg-dark">';
+                        html += '<div class="media">';
+                        html += '<a href="@Url.Action("CustomerItemList","Admin")?customerId=' + customer[i].CustomerId +'&tabIndex=1">';
+                        html += '<img class="align-self-center rounded-circle mr-3" style="width:85px; height:85px;" alt="" src="/assets/Image/user-male-icon.png">';                                         
+                        html += '</a>';
+                        html += '<div class="media-body">';
+                        html += '<h2 class="text-light display-6">'+customer[i].CustomerName+'</h2>';
+                        html += '<p>'+customer[i].CustomerIdShow+'</p>';
+                        html += '</div>';
+                        html += '</div>';
+                        html += '</div>';
+
+                        html += '<ul class="list-group list-group-flush">';
+                        html += '<li class="list-group-item">';
+                        html += '<a href="@Url.Action("CustomerItemList","Admin")?customerId=' + customer[i].CustomerId +'&tabIndex=1"> <i class="fa fa-bell-o"></i> ສີນຄ້າຢືນຢັນໃຫມ່ <span class="badge badge-success pull-right">'+customer[i].NumberOfConfirmItem+'</span></a>';
+                        html += '</li>';
+                        html += '<li class="list-group-item">';
+                        html += '<a href="@Url.Action("CustomerItemList","Admin")?customerId=' + customer[i].CustomerId +'&tabIndex=2"> <i class="fa fa-tasks"></i> ສີນຄ້າກຳລັງດຳເນີນການ <span class="badge badge-danger pull-right">'+customer[i].NumberOfInProcessItem+'</span></a>';
+                        html += '</li>';
+                        html += '<li class="list-group-item">';
+                        html += '<a href="@Url.Action("CustomerItemList","Admin")?customerId=' + customer[i].CustomerId + '&tabIndex=3"> <i class="fa fa-envelope-o"></i> ສີນຄ້າກຳລັງສົ່ງ <span class="badge badge-primary pull-right">' + customer[i].NumberOfItemSending+'</span></a>';
+                        html += '</li>';
+                        html += '<li class="list-group-item">';
+                        html += '<a href="@Url.Action("CustomerItemList","Admin")?customerId=' + customer[i].CustomerId +'&tabIndex=4"> <i class="fa fa-envelope-o"></i> ສີນຄ້າສົ່ງແລ້ວ <span class="badge badge-primary pull-right">'+customer[i].NumberOfProcessedItem+'</span></a>';
+                        html += '</li>';
+
+                        html += '</ul>';
+                        html += '</section>';
+                        html += '</aside>';
+                        html += '</div>';
+                        html += '</div>';
+                        jQuery("#CustomerBody").append(html);
+                    }
+                }
+            });
+        }
+
+    </script>
+    
+    }
