--- a/AnousithExpress.web.mvc/Views/Delivery/ItemsToSent.cshtml
+++ b/AnousithExpress.web.mvc/Views/Delivery/ItemsToSent.cshtml
@@ -44,8 +44,9 @@
                     
                                     <div class="form-group">
                                         <label>ວັນທີສົ່ງ</label>
-                                        <input type="text" name="dateToDeliver" id="dateToDeliver" placeholder="ວັນ ເດືອນ ປີ ທີ່ສົ່ງ" />
+                                        <input type="text" name="dateToDeliver" id="dateToDeliver" onchange="hideDatePicker(this)" placeholder="ວັນ ເດືອນ ປີ ທີ່ສົ່ງ" />
                                     </div>
+                                    <button class="btn btn-warning" onclick="searchItems()">ຄົ້ນຫາ</button>
                                    
                                 </div>
                             </div>
@@ -53,14 +54,19 @@
                                 <table id="itemDataTable" class="table table-striped table-hover table-bordered " style="width:100%;white-space:nowrap;">
                                     <thead>
                                         <tr>
-                                           
-                                            <th class="control">ປະເພດສີນຄ້າ</th>
+
+
                                             <th class="control">ເລກຕິດຕາມ</th>
-                                            <th class="none">ສະຖານະ</th>
+                                            <th class="none">ປະເພດສີນຄ້າ</th>
                                             <th class="control">ຊື່ຜູ້ຮັບ</th>
                                             <th class="control">ເບີໂທຜູ້ຮັບ</th>
+                                            <th class="none">ສະຖານະ</th>
+                                            <th class="control">ມື້ພະນັກງານສົ່ງ</th>
+                                            <th class="none">ມື້ສີນຄ້າຮອດປາຍທາງ</th>
                                             <th class="none">ທີ່ຢູ່ຜູ້ຮັບ</th>
+                                            <th class="none">ລາຍລະອຽດ</th>
                                             <th class="none">ເກັບເງິນປາຍທາງ</th>
+                                            <th></th>
                                         </tr>
                                     </thead>
 
@@ -68,9 +74,7 @@
                             </div>
 
                         </div>
-                        <div class="card-footer text-center">
-                            <input type="button" class="btn btn-warning btn-flat w-75" name="name" onclick="submitReceive()" value="ຢືນຢັນການຮັບສີນຄ້າ" />
-                        </div>
+                       
                     </div>
                 </div>
 
@@ -83,10 +87,25 @@
         <div class="modal-content">
             <div class="modal-body">
                 <div id="content" class="text-center">
-                    <strong id="popupmessage">ທ່ານແນ່ໃຈທີ່ຈະລືບລາຍການ?</strong>
+                   
                 </div>
                 <div id="modalButton" class="text-center">
-                    <button class="btn btn-primary btn-flat mb-1 w-75" data-dismiss="modal">ອອກ</button>
+                    
+                   
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="modal2" role="dialog" data-backdrop="static">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-body">
+                <div id="content" class="text-center">
+                    <strong id="messageOutput"></strong>
+                </div>
+                <div id="modalButton2" class="text-center">
+
                 </div>
             </div>
         </div>
@@ -96,12 +115,15 @@
     <script type="text/javascript" language="javascript">
         let table;
         jQuery(document).ready(function () {
-            //itemTable();
+            itemTable();
             jQuery('input[name="dateToDeliver"]').datepicker({
                 language:"la"
             });
         
         });
+        function hideDatePicker(source) {
+           jQuery(source).datepicker('hide');
+        }
         function toggle(source) {
             let checkboxes = document.getElementsByName("itemsId");
             for (var i = 0, n = checkboxes.length; i < n; i++) {
@@ -113,17 +135,26 @@
             table = jQuery("#itemDataTable").DataTable({
                 serverSide: true,
                 responsive: true,
-                paging: false,
+                paging: true,
+                pageLength: 25,
+                lengthChange: false,
                 searching: false,
                 sorting: false,
                 language: LaoLangage,
 
                 ajax: {
-                    url: "/Delivery/ItemsToPickUpTable",
+                    url: "/Delivery/ItemsToSentTable",
                     type: "POST",
                     datatype: "json",
                     data: function (d) {
-                        d.customerId = jQuery("input[name='customerId']").val() || 0
+                        d.routeId = jQuery("#Route").val() || 0;
+                        d.timeId = jQuery("#Time").val() || 0;
+                        d.dateToDeliver = jQuery("#dateToDeliver").val();
+                    }
+                },
+                rowCallback: function (row, data) {
+                    if (data.StatusId==6 || data.StatusId == 8) {
+                        jQuery("td", row).css('background-color','#98FB98');
                     }
                 },
                 columnDefs: [
@@ -134,14 +165,19 @@
 
                 ],
                 columns: [
-                    
 
+
+                    
+                    { data: "TrackingNumber", name: "TrackingNumber" }, 
+                    
                     { data: "ItemName", name: "ItemName" },
-                    { data: "TrackingNumber", name: "TrackingNumber" },
-                    { data: "Status", name: "Status" },
                     { data: "ReceiverName", name: "ReceiverName" },
                     { data: "ReceipverPhone", name: "ReceipverPhone" },
-                    { data: "ReceiverAddress", name: "ReceiverAddress" },
+                    { data: "Status", name: "Status" },
+                    { data: "DateToDeliver", name: "DateToDeliver" },
+                    { data: "SentDate", name: "SentDate" },
+                    { data: "ReceiverAddress", name: "ReceiverAddress" },        
+                    { data: "Description", name: "Description" },
                     {
                         data: "Id", render: function (data, type, full, meta) {
                             let html = '';
@@ -159,6 +195,17 @@
                             }
                             return '' + html + '';
                         }
+                    },
+                    {
+                        data: "ItemId", render: function (data, type, full, meta) {
+                            if (full.StatusId !== 6 && full.StatusId !== 8) {
+                                return '<button class="btn btn-warning" onclick="SendItemDialog('+ data +','+ full.StatusId +')" style="align:center;">ກົດສົ່ງເຄື່ອງ</button>';
+                            }
+                            else {
+                                return '';
+                            }
+                            
+                        }
                     }
 
                 ]
@@ -168,31 +215,53 @@
             table.ajax.reload(false, null);
         }
 
-        function submitReceive() {
-            let CheckboxArray = [];
-            jQuery("#checkId:checked").each(function () {
-                CheckboxArray.push(jQuery(this).val());
-            });
-
+        function SendItemDialog(id, status) {
+            let itemId = id;
+            let statusId = status;
             jQuery.ajax({
-                url: "/Delivery/PickUp",
-                data: { itemsId: CheckboxArray },
+                url: "/Delivery/ItemDetail",
+                data: { itemId:itemId  },
+                type: "POST",
+                datatype: "json",
+                success: function (r) {
+                    let htmlButton = ' <button class="btn btn-warning btn-flat mb-2 w-75" onclick="SendItemConfirmDialog('+ itemId +','+ statusId +')" >ລູກຄ້າກົດຮັບເຄື່ອງ</button>';
+                    htmlButton += ' <button class="btn btn-primary btn-flat mb-1 w-75" data-dismiss="modal" data-target="#modal1">ອອກ</button>';
+                    jQuery("#content").html(r);
+                    jQuery("#modalButton").html(htmlButton);
+                    jQuery("#modal1").modal("show");
+    
+                },
+                error: function () {
+                    alert("Server error");
+                }
+            });
+        }
+        function SendItemConfirmDialog(id, status) {
+            let itemId = id;
+            let statusId = status;
+            let htmlButton = ' <button class="btn btn-warning btn-flat mb-2 w-75" onclick="UpdateItemSent(' + itemId + ',' + statusId +')">ຢືນຢັນ</button>';
+            htmlButton += ' <button class="btn btn-primary btn-flat mb-1 w-75" data-dismiss="modal" data-target="#modal2">ອອກ</button>';
+            jQuery("#messageOutput").html("ກະລຸນາກົດຍືນຢັນ");
+            jQuery("#modalButton2").html(htmlButton);
+            jQuery("#modal2").modal("show");         
+        }
+        function UpdateItemSent(id, status) {
+            let itemId = id;
+            let statusId = status;
+            jQuery.ajax({
+                url: "/Delivery/SentItem",
+                data: { itemId: itemId, statusId: statusId },
                 type: "POST",
                 datatype: "json",
                 success: function (r) {
                     if (r === true) {
-                        jQuery("#popupmessage").html("ສຳເລັດ");
-                        jQuery("#modal1").modal("show");
-                        table.ajax.reload(null, false);
-                    }
-                    else if (r === "inValid") {
-                        jQuery("#popupmessage").html("ກະລຸນາເລືອກສີນຄ້າ");
-                        jQuery("#modal1").modal("show");
-                    }
-                    else {
-                        jQuery("#popupmessage").html("ບໍ່ສຳເລັດ");
-                        jQuery("#modal1").modal("show");
-                        table.ajax.reload(null, false);
+                        let htmlButton = ' <button class="btn btn-primary btn-flat mb-1 w-75" data-dismiss="modal" data-target="#modal2">ອອກ</button>';
+                        jQuery("#modal1").modal("hide"); 
+                        jQuery("#modal2").modal("hide"); 
+                        table.ajax.reload(null,false);
+                        jQuery("#messageOutput").html("ສຳເລັດ");            
+                        jQuery("#modalButton2").html(htmlButton);
+                        jQuery("#modal2").modal("show"); 
                     }
                 }
             });
