--- a/AnousithExpress.web.mvc/Views/Shared/_CustomerLayout.cshtml
+++ b/AnousithExpress.web.mvc/Views/Shared/_CustomerLayout.cshtml
@@ -52,6 +52,10 @@ else
             {
                 @Html.Partial("_DeliveryMenu")
             }
+            else if (Session["Role"].ToString() == "1" || Session["Role"].ToString() == "2")
+            {
+                @Html.Partial("_AdminMenu")
+            }
             else
             {
 
@@ -171,6 +175,7 @@ else
     <script src="~/assets/js/popper.min.js"></script>
     <script src="~/assets/js/plugins.js"></script>
     <script src="~/assets/js/main.js"></script>
+    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
 
     <script src="~/assets/js/datatables.min.js"></script>
     <script src="~/assets/js/lib/data-table/dataTables.bootstrap.min.js"></script>
